# almanach

./: .gitignore  devenv.nix  flake.nix  pyproject.toml  test.txt  test_publish.py
parser/: pyproject.toml
parser/src/read_ais/: __init__.py  parseur.py  test_parseur.py
publisher/: pyproject.toml
publisher/src/almanach_publisher/: publisher.py  test_fonctionnalites.py
src/almanach/: __init__.py  publisher.py
src/almanach/models/: __init__.py  ais_messages.py  enums.py  kpi.py  serialize.py  types.py
src/almanach/subscription/: __init__.py  _nats_protocols.py  _pipelines.py  _types.py  defragment.py  subscriber.py  suscriber.py
tests/almanach/models/: test_ais_messages.py
tests/almanach/subscription/: test_async_callback.py  test_defragment.py  test_pipelines.py  test_subscriber.py  test_types.py
