[project]
name = "almanach"
description = "Interface lib for all bateau-ais projects."
readme = "README.md"
authors = [
    { name = "Safenein", email = "safenein@cavernum.ovh" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.4",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling>=1.27.0", "versioningit", "editables>=0.5"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=0.41.0",
    "ruff>=0.14.4",
    "versioningit>=3.3.0",
]

[tool.versioningit]
default-version = "0.0.0"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"